.provarCaches/00D5h000009Q6XQEA0/objects/provar__Issue_Link_Type__c.object
<CustomObject>
    <fields>
        <fullName>provar__Inward_Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Inward Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Inward__c</fullName>
        <label>Inward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Outward_Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Outward Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Outward__c</fullName>
        <label>Outward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Issue Link Type</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Outward__c</columns>
        <columns>provar__Inward__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Link Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Link Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>